results/SVCOMP/houdini/log-lazyloading4-2024_03_18_20_45_06.txt
class Problem {
  private static final Object[] DEFAULT = {};
  private Object data;

  Problem() {
    this.data = DEFAULT;
  }

  boolean checkInvariant() {
    return data != null;
  }
}

public class lazyloading4 {
  public static boolean f() {
    return Problem().checkInvariant();
  }

  public static void main(String[] args) {
    f();
  }
}


/home/max/Documents/JMLGPT/tmp/lazyloading4.java:16: error: cannot find symbol
    return Problem().checkInvariant();
           ^
  symbol:   method Problem()
  location: class lazyloading4
1 error

